--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ url: 'https://dittozhang.github.io'
 github:
   username: dittozhang             # change to your github username
 
-# twitter:
-  # username: none            # change to your twitter username
+twitter:
+  username: dittoditto0313            # change to your twitter username
 
 social:
   # Change to your full name.
@@ -42,7 +42,7 @@ social:
   email: ditto@d1tt0.net             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/none      # change to your twitter homepage
+    - https://twitter.com/dittoditto0313      # change to your twitter homepage
     - https://github.com/dittozhang       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
