--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://dittozhang.github.io'
+url: 'https://blog.d1tt0.net'
 
 github:
   username: dittozhang             # change to your github username
