--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ timezone: Asia/Taipei
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: d1tt0                          # the main title
+title: ditto/d1tt0                          # the main title
 
 tagline: 不問不會，多問多會。<br>歡迎交流 = ˇ =   # it will display as the sub-title
 
@@ -27,7 +27,7 @@ description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://blog.d1tt0.net'
+url: 'https://blog.ditto.tw'
 
 github:
   username: dittozhang             # change to your github username
@@ -39,7 +39,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: dittozhang
-  email: ditto@d1tt0.net             # change to your email address
+  email: ditto@ditto.tw             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/dittoditto0313      # change to your twitter homepage
