--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ timezone: Asia/Taipei
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: ditto/d1tt0                          # the main title
+title: ditto(d1tt0)                          # the main title
 
 tagline: 不問不會，多問多會。<br>歡迎交流 = ˇ =   # it will display as the sub-title
 
